# img-folder-processing

./: .gitignore  pyproject.toml
