[tool.poetry]
name = "img-folder-processing"
version = "0.1.0"
description = ""
authors = ["François Weber <f.weber@qwant.com>"]
readme = "README.md"
packages = [{include = "img_folder_processing"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
pyexiftool = "^0.5.5"
jupyterlab = {version = "^3.6.3", extras = ["dev"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
